# Documate_Backend

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/application/: mod.rs
src/domain/entities/: user.rs
src/infra/: web.rs
