[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1", features = ["v4"] }
dotenvy = "0.15"
tokio = { version = "1", features = ["full"] }
chrono = "0.4.42"
async-trait = "0.1"